// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getButtonAttributes() > should return correct css for isSelected: false and isDisabled: false 1`] = `
{
  "aria-disabled": null,
  "aria-label": "Some label",
  "aria-pressed": "false",
}
`;

exports[`getButtonAttributes() > should return correct css for isSelected: false and isDisabled: true 1`] = `
{
  "aria-disabled": "true",
  "aria-pressed": "false",
}
`;

exports[`getButtonAttributes() > should return correct css for isSelected: true and isDisabled: false 1`] = `
{
  "aria-disabled": null,
  "aria-label": "Some label",
  "aria-pressed": "true",
}
`;

exports[`getButtonAttributes() > should return correct css for isSelected: true and isDisabled: true 1`] = `
{
  "aria-disabled": "true",
  "aria-pressed": "true",
}
`;
